--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ body {
 
 #phone {
   position: absolute;
-  z-index: 50; }
+  z-index: 50;
+  pointer-events: none; }
 
 .app {
   background-color: #f8f8f4;
@@ -42,14 +43,14 @@ nav {
   background-color: white;
   z-index: 150;
   width: 300px;
-  height: 555px;
-  margin-left: -551px; }
+  height: 565px;
+  margin-left: -570px; }
 
 #menuToggle {
   display: block;
   position: absolute;
-  top: 36px;
-  left: 10px;
+  top: 40px;
+  left: 14px;
   z-index: 1;
   -webkit-user-select: none;
   user-select: none; }
@@ -82,11 +83,11 @@ nav {
   height: 3px;
   margin-bottom: 5px;
   position: relative;
-  background: #333;
+  background: #696960;
   border-radius: 3px;
   z-index: 1;
   transform-origin: 4px 0px;
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease; }
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease, width 0.5s ease; }
 
 #menuToggle span:first-child {
   transform-origin: 0% 0%; }
@@ -97,7 +98,8 @@ nav {
 #menuToggle input:checked ~ span {
   opacity: 1;
   transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323; }
+  background: #696960;
+  width: 29px; }
 
 #menuToggle input:checked ~ span:nth-last-child(3) {
   opacity: 0;
@@ -111,7 +113,7 @@ nav {
   width: 250px;
   height: 485px;
   box-sizing: border-box;
-  margin: 5px 0 0 -50px;
+  margin: 3px 0 0 -50px;
   padding: 125px 20px 20px 60px;
   padding-top: 125px;
   background: #ededed;
