--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins");
 body {
   margin: 0;
   padding: 0; }
@@ -23,7 +24,17 @@ body {
   top: 50%;
   left: 50%;
   margin-left: -125px;
-  margin-top: -272px; }
+  margin-top: -272px;
+  overflow-y: scroll; }
+
+.app::-webkit-scrollbar {
+  width: 0 !important; }
+
+.app {
+  overflow: -moz-scrollbars-none; }
+
+.app {
+  -ms-overflow-style: none; }
 
 .top-bar {
   height: 40px;
@@ -129,5 +140,358 @@ nav {
 
 #menuToggle input:checked ~ ul {
   transform: none; }
+
+#container {
+  width: 500px;
+  margin: auto !important;
+  display: block;
+  height: 500px;
+  top: 0;
+  position: absolute;
+  list-style-type: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.buddy {
+  display: none;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  color: #fff;
+  padding: 20px;
+  width: 360px;
+  height: 360px;
+  top: 50px;
+  left: 50px;
+  position: absolute;
+  cursor: hand; }
+
+.rotate-left {
+  transform: rotate(30deg) scale(0.8);
+  transition: 1s;
+  margin-left: 400px;
+  cursor: e-resize;
+  opacity: 0;
+  z-index: 10; }
+
+.rotate-right {
+  transform: rotate(-30deg) scale(0.8);
+  transition: 1s;
+  opacity: 0;
+  margin-left: -400px;
+  cursor: w-resize;
+  z-index: 10; }
+
+.avatar {
+  background: #222;
+  width: 340px;
+  height: 340px;
+  display: block;
+  margin-top: 10px;
+  margin-left: 10px;
+  background-size: auto 160% !important;
+  background-position: center;
+  background-repeat: no-repeat; }
+
+.like {
+  border-radius: 5px;
+  padding: 5px 10px;
+  border: 2px solid green;
+  color: green;
+  text-transform: uppercase;
+  font-size: 15px;
+  position: absolute;
+  top: 50px;
+  right: 40px;
+  text-shadow: none; }
+
+.dislike {
+  border-radius: 5px;
+  padding: 5px 10px;
+  border: 2px solid red;
+  color: red;
+  text-transform: uppercase;
+  font-size: 15px;
+  position: absolute;
+  top: 50px;
+  left: 40px;
+  text-shadow: none; }
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif; }
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit; }
+
+.preview-block {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  max-width: 450px;
+  width: 100%; }
+
+.preview-block__content {
+  position: relative;
+  z-index: 100;
+  top: -40px; }
+
+.image-block {
+  height: 200px;
+  width: 100%;
+  position: relative;
+  z-index: -1; }
+
+.image-block__wrapper {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  border-radius: 5px; }
+
+.image-block__image {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.3s ease; }
+
+.btn {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  z-index: 1000;
+  bottom: 5px;
+  left: 10px;
+  background-color: transparent;
+  border: none;
+  color: #1B998B;
+  cursor: pointer;
+  transition: 0.3s ease;
+  outline: none; }
+
+.btn span {
+  height: 15px; }
+
+.btn svg {
+  width: 15px;
+  height: 15px;
+  fill: #1B998B; }
+
+.btn:hover {
+  color: #167a6f;
+  letter-spacing: 1.3px; }
+
+.block {
+  max-width: 450px;
+  width: 100%;
+  max-height: 200px;
+  box-shadow: 1px 3px 20px #aaa;
+  border-radius: 5px;
+  overflow: hidden;
+  background-color: #fff;
+  padding: 15px;
+  transition: 0.6s ease;
+  position: relative;
+  font-size: 0.75em; }
+
+.block__content {
+  display: inline-block;
+  transition: 0.3s ease; }
+
+.block:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  bottom: 0;
+  left: 0;
+  transition: 0.3s ease;
+  background-image: linear-gradient(0deg, #fff 30%, transparent); }
+
+.block__title {
+  margin-bottom: 0;
+  color: #330033;
+  margin-top: 0; }
+
+.block__name {
+  margin: 0 0 1em;
+  font-size: 0.8em;
+  color: #333; }
+
+.block--open {
+  transition: 0.6s ease;
+  max-height: 1000px;
+  padding: 15px; }
+
+.block--open:before {
+  opacity: 0;
+  z-index: -200; }
+
+.block--open .btn {
+  bottom: 10px; }
+
+.block--open .btn span {
+  display: inline; }
+
+.block--open .btn svg {
+  transform: rotate(180deg); }
+
+.block--open .block__content {
+  display: block;
+  padding-bottom: 20px; }
+
+.block__cost {
+  background-color: #330033;
+  color: white;
+  padding: 8px;
+  position: absolute;
+  top: 20px;
+  margin-right: auto; }
+
+.block__tags {
+  max-width: 450px;
+  width: 100%;
+  border-radius: 5px;
+  padding: 15px 15px 0.5em;
+  font-size: 0.9em; }
+
+.block__tags-item {
+  padding: 0.2em 0.8em;
+  font-size: 0.8em;
+  margin-bottom: 0.5em;
+  margin-right: 0.5em;
+  color: #fff;
+  border-radius: 2em;
+  display: inline-block;
+  line-height: 1.6em;
+  background-color: #1B998B; }
+
+.page-actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 450px;
+  width: 100%;
+  padding: 1em;
+  padding-bottom: 25px;
+  border-radius: 5px;
+  overflow: hidden; }
+
+.page-actions__button {
+  border-radius: 50%;
+  border: none;
+  width: 40px;
+  height: 40px;
+  background-color: #fff;
+  box-shadow: 1px 5px 20px #aaa;
+  position: relative;
+  top: 130px;
+  cursor: pointer;
+  animation: jump_go 0.5s ease forwards;
+  transition: 0.3s ease; }
+
+.page-actions__button svg {
+  fill: #fff;
+  width: 18px;
+  height: 18px;
+  position: relative;
+  top: 2px; }
+
+.page-actions__button--prev {
+  width: 40px;
+  height: 40px;
+  animation-delay: 0s; }
+
+.page-actions__button--prev:hover {
+  box-shadow: 1px 5px 30px #aaa; }
+
+.page-actions__button--prev:active {
+  box-shadow: 1px 5px 10px #aaa; }
+
+.page-actions__button--prev svg {
+  fill: #888; }
+
+.page-actions__button--chat {
+  background-color: #1B998B;
+  box-shadow: 1px 5px 20px rgba(27, 153, 139, 0.6);
+  animation-delay: 0.1s;
+  transition: 0.3s ease; }
+
+.page-actions__button--chat:hover {
+  box-shadow: 1px 5px 30px rgba(27, 153, 139, 0.6); }
+
+.page-actions__button--chat:active {
+  box-shadow: 1px 5px 10px rgba(27, 153, 139, 0.6); }
+
+.page-actions__button--like {
+  background-color: #E71D36;
+  box-shadow: 1px 5px 20px rgba(231, 29, 54, 0.6);
+  animation-delay: 0.2s;
+  transition: 0.3s ease; }
+
+.page-actions__button--like:hover {
+  box-shadow: 1px 5px 30px rgba(231, 29, 54, 0.6); }
+
+.page-actions__button--like:active {
+  box-shadow: 1px 5px 10px rgba(231, 29, 54, 0.6); }
+
+.page-actions__button--like-remove {
+  animation: remove_animation_go 0.3s ease forwards; }
+
+.page-actions__button--next {
+  width: 40px;
+  height: 40px;
+  animation-delay: 0.3s; }
+
+.page-actions__button--next:hover {
+  box-shadow: 1px 5px 30px #aaa; }
+
+.page-actions__button--next:active {
+  box-shadow: 1px 5px 10px #aaa; }
+
+.page-actions__button--next svg {
+  fill: #888; }
+
+@keyframes jump_go {
+  0% {
+    transform: translateY(0) scale(0.3); }
+  30% {
+    transform: translateY(-140px) scale(0.7); }
+  40% {
+    transform: translateY(-120px) scale(0.95); }
+  50% {
+    transform: translateY(-135px) scale(1); }
+  60% {
+    transform: translateY(-125px) scale(0.95); }
+  100% {
+    transform: translateY(-130px) scale(1); } }
+@keyframes remove_animation_go {
+  0% {
+    transform: translateY(-130px) scale(1); }
+  90% {
+    transform: translateY(-130px) scale(1.1); }
+  100% {
+    transform: translateY(-130px) scale(0); } }
+@media screen and (max-width: 450px) {
+  .preview-block {
+    top: 0; }
+
+  .image-block__wrapper {
+    border-radius: 0; } }
 
 /*# sourceMappingURL=style.css.map */
