--- a/style.scss
+++ b/style.scss
@@ -58,6 +58,84 @@ nav {
   z-index: 100;
 }
 
+.view {
+  background-color: white;
+  width: 100%;
+  height: 80%;
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+}
+.map-view {
+  overflow: hidden;
+
+  img {
+    width: 110%;
+  }
+
+  .map {
+    margin-left: -25px;
+    margin-top: -80px;
+  }
+
+  .map-point {
+    position: absolute;
+    width: 28px;
+    cursor: pointer;
+    filter: invert(17%) sepia(71%) saturate(7315%) hue-rotate(257deg) brightness(91%) contrast(106%);
+  }
+
+  .you {
+    position: absolute;
+    width: 13px;
+    height: 13px;
+    background-color: #AA1111;
+    border-radius: 100%;
+    top: 30%;
+    left: 49%;
+  }
+
+  .you-bg {
+    width: 17px;
+    height: 17px;
+    opacity: 0.5;
+    margin-left: -2px;
+    margin-top: -2px;
+  }
+
+  #point-1 {
+    top: 147px;
+    left: 163px;
+  }
+  #point-2 {
+    top: 245px;
+    left: 41px;
+  }
+  #point-3 {
+    top: 265px;
+    left: 175px;
+  }
+
+
+  .view-mission {
+    width: 100%;
+    height: 100%;
+    background-color: #f3f3e9;
+    border-top: 1px solid #e0e0d2;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    span {
+      font-size: 10px;
+      text-align: center;
+    }
+  }
+
+}
+
 .secret-background {
   position: absolute;
   background-color: white;
