--- a/style.scss
+++ b/style.scss
@@ -136,6 +136,157 @@ nav {
 
 }
 
+.links {
+  padding: 18px 12px;
+}
+
+.menu-rank {
+  position: relative;
+  #rank-do {
+    width: 110px;
+    background-color: #888;
+    height: 8px;
+    border-radius: 3px;
+  }
+  #rank-done {
+    position: absolute;
+    border-radius: 3px;
+    width: 80px;
+    background-color: #7F9;
+    height: 8px;
+    top: 0;
+  }
+  p {
+    color: #aaa;
+    font-size: 8px;
+    margin-top: 12px;
+  }
+}
+
+.menu-you {
+  display: flex;
+  background-color: #333;
+  width: 100%;
+  min-height: 100px;
+  padding: 20px 20px 10px 12px;
+  flex-direction: row;
+  align-items: center;
+
+  .menu-img {
+    img {
+      width: 45px;
+      height: 45px;
+      border-radius: 100%;
+      margin-top: -8px;
+    }
+
+    p {
+      font-size: 8px;
+      color: white;
+      margin: 0;
+    }
+
+    display: flex;
+    flex-direction: column;
+    .menu-coins {
+      margin-top: 14px;
+      img {
+        width: 13px;
+        height: 13px;
+        margin-top: 1px;
+      }
+      display: flex;
+      flex-direction: row;
+
+      p {
+        color: white;
+        font-size: 11px;
+        margin: 0;
+        margin-left: 3px;
+      }
+
+    }
+  }
+
+  .menu-name
+   {
+    color: #fff;
+    font-size: 18px;
+    padding-bottom: 0px;
+    margin: 0;
+   }
+
+   .menu-info {
+     padding-left: 10px;
+     display: flex;
+     flex-direction: column;
+   }
+
+   .menu-level {
+     margin: 0;
+     color: #f7f7e8;
+     font-size: 10px;
+   }
+}
+
+.milestone {
+  background-color: #529;
+  width: 100%;
+  min-height: 80px;
+  padding: 8px 8px 5px;
+
+  h3 {
+    color: white;
+    margin: 0;
+    font-size: 14px;
+  }
+  p {
+    color: white;
+    margin: 2px 0 0 0;
+    font-size: 10px;
+  }
+
+  .milestone-progress {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    color: white;
+
+      #rank-do {
+        width: 140px;
+        background-color: #888;
+        height: 8px;
+        border-radius: 3px;
+        margin-top: 8px;
+        margin-right: 12px;
+      }
+      #rank-done {
+        position: absolute;
+        margin-right: 12px;
+        margin-top: 8px;
+        border-radius: 3px;
+        width: 120px;
+        background-color: #5B5;
+        height: 8px;
+        top: 0;
+      }
+  }
+}
+
+.menu-bottom {
+  width: 100%;
+  padding: 12px;
+  background-color: #222;
+  color: white;
+
+  a {
+    li {
+      color: white;
+      padding: 6px 0;
+    }
+  }
+}
+
 .secret-background {
   position: absolute;
   background-color: white;
@@ -250,9 +401,8 @@ nav {
   width: 250px;
   height: 485px;
   box-sizing: border-box;
-  margin: 7px 0 0 -50px;
-  padding: 125px 20px 20px 60px;
-  padding-top: 125px;
+  margin: 7px 0 0 -53px;
+
   z-index: 20;
 
   background: #ededed;
