--- a/style.css
+++ b/style.css
@@ -117,20 +117,103 @@ nav {
   .map-view #point-3 {
     top: 265px;
     left: 175px; }
+  .map-view #default {
+    padding: 16px; }
   .map-view .view-mission {
     width: 100%;
     position: absolute;
     bottom: 0;
-    height: 200px;
-    background-color: #white;
-    padding: 16px;
+    height: 190px;
+    background-color: white;
     display: flex;
+    border-radius: 24px;
     flex-direction: column;
     align-items: center;
-    justify-content: center; }
+    justify-content: flex-start;
+    overflow-y: scroll; }
+    .map-view .view-mission img {
+      width: 100%;
+      border-radius: 16px 16px 0 0; }
     .map-view .view-mission span {
       font-size: 10px;
       text-align: center; }
+    .map-view .view-mission h3 {
+      font-size: 16px;
+      margin: 0 0 6px;
+      width: 100%;
+      padding: 12px 16px;
+      margin-right: auto;
+      background-color: #333;
+      color: white; }
+    .map-view .view-mission p {
+      margin: 0;
+      padding: 10px 16px;
+      font-size: 10px; }
+    .map-view .view-mission .mission-take {
+      height: 160px;
+      background-color: #9ca7fe;
+      background-color: white;
+      width: 100%;
+      border-radius: 16px 16px 0 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+    .map-view .view-mission .mission-yes {
+      padding: 8px;
+      box-sizing: border-box;
+      flex: 5;
+      text-align: center;
+      font-size: 14px;
+      margin-right: 10px;
+      border-radius: 20px;
+      background-color: #6936eb;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+    .map-view .view-mission .mission-buttons {
+      flex-direction: row;
+      display: flex;
+      margin: 16px;
+      margin-top: 8px;
+      width: 100%;
+      font-size: 14px; }
+    .map-view .view-mission .mission-share {
+      padding: 8px;
+      font-size: 10px;
+      box-sizing: border-box;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      flex: 2;
+      font-size: 9px;
+      margin: 0 10px;
+      border-radius: 20px;
+      background-color: #6936eb;
+      color: white; }
+      .map-view .view-mission .mission-share div {
+        display: flex;
+        align-items: center;
+        justify-content: center; }
+      .map-view .view-mission .mission-share img {
+        width: 12px;
+        height: 12px;
+        box-sizing: border-box;
+        margin: 0px 2px 0 2px; }
+    .map-view .view-mission .mission-reward {
+      margin-top: 18px;
+      font-size: 14px;
+      display: flex;
+      flex-direction: row;
+      color: white;
+      color: #333;
+      padding-right: 16px;
+      width: 100%;
+      align-items: center;
+      justify-content: flex-end; }
+      .map-view .view-mission .mission-reward img {
+        width: 15px;
+        margin: 0 2px; }
 
 .links {
   padding: 11px 12px; }
