--- a/style.scss
+++ b/style.scss
@@ -131,24 +131,131 @@ nav {
   }
 
 
+  #default {
+    padding: 16px;
+  }
+
   .view-mission {
     width: 100%;
     position: absolute;
     bottom: 0;
-    height: 200px;
-    background-color: #white;
-    padding: 16px;
+    height: 190px;
+    background-color: white;
     display: flex;
+    border-radius: 24px;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    overflow-y: scroll;
+
+    img {
+      width: 100%;
+      border-radius: 16px 16px 0 0;
+    }
 
     span {
       font-size: 10px;
       text-align: center;
     }
-  }
 
+    h3 {
+      font-size: 16px;
+      margin: 0 0 6px;
+      width: 100%;
+      padding: 12px 16px;
+
+      margin-right: auto;
+      background-color: #333;
+      color: white;
+    }
+
+    p {
+      margin: 0;
+      padding: 10px 16px;
+      font-size: 10px;
+    }
+
+    .mission-take {
+      height: 160px;
+      background-color: #9ca7fe;
+      background-color:white;
+      width: 100%;
+      border-radius: 16px 16px 0 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .mission-yes {
+      padding: 8px;
+      box-sizing: border-box;
+      flex: 5;
+      text-align: center;
+      font-size: 14px;
+      margin-right: 10px;
+      border-radius: 20px;
+      background-color: #6936eb;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .mission-buttons {
+      flex-direction: row;
+      display: flex;
+      margin: 16px;
+      margin-top: 8px;
+      width: 100%;
+
+      font-size: 14px;
+    }
+
+
+    .mission-share {
+      padding: 8px;
+      font-size: 10px;
+      box-sizing: border-box;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      flex: 2;
+      font-size: 9px;
+      margin: 0 10px;
+      border-radius: 20px;
+      background-color: #6936eb;
+      color: white;
+      div {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      img {
+        width: 12px;
+        height: 12px;
+        box-sizing: border-box;
+        margin: 0px 2px 0 2px;
+
+      }
+    }
+    .mission-reward {
+      img {
+        width: 15px;
+        margin: 0 2px;
+      }
+      margin-top: 18px;
+      font-size: 14px;
+      display: flex;
+      flex-direction: row;
+      color: white;
+      color: #333;
+      padding-right: 16px;
+      width: 100%;
+      align-items: center;
+      justify-content: flex-end;
+    }
+  }
 }
 
 .links {
