--- a/style.css
+++ b/style.css
@@ -82,6 +82,84 @@ nav {
   flex-direction: column;
   overflow-y: scroll; }
 
+.volunteer-view {
+  overflow-y: scroll;
+  display: flex;
+  height: 80%;
+  flex-direction: column;
+  padding-bottom: 50px; }
+  .volunteer-view .volunteering-task {
+    display: flex;
+    flex-direction: column;
+    border-radius: 6px;
+    margin: 16px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    position: relative;
+    box-shadow: 1px 3px 15px #ccc; }
+    .volunteer-view .volunteering-task .volunteering-coins {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      border-radius: 6px;
+      background-color: #6936eb;
+      padding: 3px 6px;
+      color: white;
+      font-size: 10px; }
+      .volunteer-view .volunteering-task .volunteering-coins img {
+        width: 15px;
+        height: 15px;
+        margin-right: 3px; }
+    .volunteer-view .volunteering-task .volunteering-image img {
+      max-height: 100px;
+      border-radius: 6px 6px 0 0;
+      width: 100%;
+      object-fit: cover; }
+    .volunteer-view .volunteering-task h2 {
+      background-color: white;
+      font-size: 12px;
+      color: black;
+      font-weight: 300;
+      padding: 0px 10px 6px 10px;
+      border-radius: 0 0 6px 6px;
+      text-align: left;
+      margin: 0; }
+    .volunteer-view .volunteering-task h6 {
+      font-size: 9px;
+      color: #ccc;
+      margin: 2px 0;
+      padding-left: 10px; }
+  .volunteer-view h2 {
+    padding: 12px 0 0 0;
+    font-size: 18px;
+    background-color: white;
+    color: #333;
+    text-align: center;
+    margin: 0; }
+  .volunteer-view .volunteer-block {
+    width: 90%;
+    box-sizing: border-box; }
+    .volunteer-view .volunteer-block img {
+      height: 100px;
+      object-fit: cover; }
+    .volunteer-view .volunteer-block .preview-block__content {
+      top: 0; }
+    .volunteer-view .volunteer-block .image-block {
+      height: 100px; }
+    .volunteer-view .volunteer-block .image-block__image {
+      position: relative;
+      top: 0;
+      left: 0;
+      transform: none; }
+    .volunteer-view .volunteer-block h2 {
+      background-color: white;
+      color: black;
+      padding: 0px; }
+
 .map-view {
   overflow: hidden; }
   .map-view img {
@@ -131,6 +209,9 @@ nav {
     align-items: center;
     justify-content: flex-start;
     overflow-y: scroll; }
+    .map-view .view-mission .mission-image {
+      height: 160px;
+      object-fit: cover; }
     .map-view .view-mission img {
       width: 100%;
       border-radius: 16px 16px 0 0; }
@@ -201,7 +282,7 @@ nav {
         box-sizing: border-box;
         margin: 0px 2px 0 2px; }
     .map-view .view-mission .mission-reward {
-      margin-top: 18px;
+      margin-top: 6px;
       font-size: 14px;
       display: flex;
       flex-direction: row;
@@ -214,6 +295,36 @@ nav {
       .map-view .view-mission .mission-reward img {
         width: 15px;
         margin: 0 2px; }
+    .map-view .view-mission .mission-tag {
+      position: absolute;
+      top: 8px;
+      left: 8px;
+      color: white;
+      border-radius: 6px;
+      background-color: #6936eb;
+      font-size: 10px;
+      padding: 4px; }
+    .map-view .view-mission .mission-back {
+      position: absolute;
+      top: 8px;
+      font-size: 10px;
+      right: 8px;
+      color: white;
+      padding: 3px;
+      background-color: rgba(0, 0, 0, 0.5);
+      border-radius: 6px;
+      cursor: pointer; }
+    .map-view .view-mission .mission-tag-rel {
+      position: relative;
+      margin-right: 5px;
+      top: 0 !important;
+      left: 0 !important; }
+    .map-view .view-mission .mission-tags {
+      display: flex;
+      flex-direction: row;
+      padding-top: 14px;
+      align-items: flex-start;
+      justify-content: flex-start; }
 
 .links {
   padding: 11px 12px; }
